# CSC3002_SIS

./: .gitignore  1021合作单(reg a module).md  1112 registry v1情况说明.md  CMakeLists.txt  README.md  client.cpp
sis_ws/: README.md
sis_ws/data_repo/class - 副本/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  classroom.txt
sis_ws/include/: client.hpp  course.hpp  registry.hpp  staff.hpp  student.hpp
sis_ws/src/: client.cpp  course.cpp  guitest3.cpp  registry.cpp  registryTest.cpp  staff.cpp  staffTest.cpp  startup.cpp  student.cpp  studentTest.cpp  testFile.txt
项目笔记/: 1021合作单(reg a module).md  1112 registry v1情况说明.md  1114 registry v2情况说明.md  1115v1 合作单(staff).md  1115v1合作单(staff).md  1118 Client类中供大家使用的函数.md  1118 合作单(student) v1.md  1118log_in.md  1120 staffTest所测试的功能.md  registry部分说明.md  合作联系单.md  常见错误及处理方式汇总.md  笔记：cpp中fileIO的基本操作.md
项目笔记/to gly/: 1128 功能：staff加课。完成之后的处理.txt
项目笔记/专题/: 常见错误及处理方式汇总.md  笔记：cpp if判断的细节.md  笔记：cpp中fileIO的基本操作.md
项目笔记/功能汇总/: 1118 Client类中供大家使用的函数.md  1118 功能：client登录.md  1120 staffTest所测试的功能.md  1125 staff 工作记录.md  1125 功能：client姓名处理.md  1126 功能：作业提交、批改分数.md  1126 功能：教务处通过class_claim, 教授档案和对象更新.md  1127 功能：学生常规选课.md  1128 功能：staff加课被批准之后  1128 功能：生成选课计划.md  1129更新 功能：作业提交、批改分数.md  subcase_prerequirement.cpp
项目笔记/合作单汇总/: 1021合作单(reg a module).md  1021选课与加退课联系合作单.md  1112 registry v1情况说明.md  1114 registry v2情况说明.md  1115v1合作单(staff).md  1121 memo情况说明.md  1121 合作单 单课程总成绩计算gpa并发放到学生情况.md  1121选课与加退课联系合作单.md  1125v2合作单(staff).md  1126 Student, Staff 存储 Course, Class的方式.md  1126 合作单(student).md  1128OCTE联系单.md  1129 新用户注册.md
(+120 files in other folders)
